--- a/lazyegg-plugin-generator/src/main/resources/template/UpdateCmdExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/UpdateCmdExe.java.vm
@@ -22,9 +22,9 @@ public class ${entityClassName}UpdateCmdExe {
     @Resource
     private ${entityClassName}Gateway ${entityName}Gateway;
 
-    public Response execute(${entityClassName}UpdateCmd cmd) {
+    public void execute(${entityClassName}UpdateCmd cmd) {
         ${entityName}Gateway.update${entityClassName}(cmd);
-        return Response.buildSuccess();
+        return;
     }
 }
 
