--- a/lazyegg-plugin-generator/src/main/resources/template/CountQryExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/CountQryExe.java.vm
@@ -4,8 +4,12 @@ import com.alibaba.cola.dto.SingleResponse;
 import ${package}.${moduleName}.domain.${entityName}.gateway.${entityClassName}Gateway;
 import ${package}.${moduleName}.dto.${entityClassName}CountQry;
 import ${package}.${moduleName}.dto.data.${entityClassName}DTO;
+import lombok.Data;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+
+import java.util.ArrayList;
+import java.util.List;
 
 
 @Component
@@ -14,9 +18,14 @@ public class ${entityClassName}CountQryExe {
     @Autowired
     private ${entityClassName}Gateway ${entityName}Gateway;
 
-    public SingleResponse<${entityClassName}DTO> execute(${entityClassName}CountQry qry) {
+    public ${entityClassName}DTO execute(${entityClassName}CountQry qry) {
         long count = ${entityName}Gateway.getCount();
         ${entityClassName}DTO ${entityName}DTO = new ${entityClassName}DTO();
-        return SingleResponse.of(${entityName}DTO);
+        return ${entityName}DTO;
+    }
+
+    @Data
+    public static class Context {
+
     }
 }
