--- a/lazyegg-plugin-generator/src/main/resources/template/PageQryExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/PageQryExe.java.vm
@@ -1,26 +1,25 @@
 package ${package}.${moduleName}.${entityName}.executor.query;
 
-import ${package}.${moduleName}.domain.${entityName}.${entityClassName};
-import ${package}.${moduleName}.domain.${entityName}.gateway.${entityClassName}Gateway;
+import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.PageDTO;
 import ${package}.${moduleName}.dto.${entityClassName}PageQry;
-import ${package}.${moduleName}.dto.data.${entityClassName}DTO;
+import ${package}.${moduleName}.${entityName}.${entityClassName}DO;
+import ${package}.${moduleName}.${entityName}.${entityClassName}DbService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
-import java.util.ArrayList;
-import java.util.List;
 
 
 @Component
 public class ${entityClassName}PageQryExe {
 
     @Autowired
-    private ${entityClassName}Gateway ${entityName}Gateway;
+    private ${entityClassName}DbService ${entityName}DbService;
 
-    public List<${entityClassName}DTO> execute(${entityClassName}PageQry qry) {
-        List<${entityClassName}> ${entityName}List = ${entityName}Gateway.page${entityClassName}(qry.getPageIndex(), qry.getPageSize());
+    public PageDTO<${entityClassName}DO> execute(${entityClassName}PageQry qry) {
+        int pageIndex = qry.getPageIndex();
+        int pageSize = qry.getPageSize();
+        QueryWrapper<${entityClassName}DO> queryWrapper = new QueryWrapper<>();
 
-        ArrayList<${entityClassName}DTO> ${entityName}DTOS = new ArrayList<>();
-        return ${entityName}DTOS;
+        return ${entityName}DbService.page(new PageDTO<>(pageIndex, pageSize), queryWrapper);
     }
 }
