--- a/lazyegg-plugin-generator/src/main/resources/template/ServiceI.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ServiceI.java.vm
@@ -5,6 +5,7 @@ import com.alibaba.cola.dto.Response;
 import com.alibaba.cola.dto.SingleResponse;
 import ${package}.${moduleName}.dto.*;
 import ${package}.${moduleName}.dto.data.${entityClassName}DTO;
+import io.lazyegg.core.page.PageLongResponse;
 
 public interface ${entityClassName}ServiceI {
 
@@ -20,7 +21,7 @@ public interface ${entityClassName}ServiceI {
 
     MultiResponse<${entityClassName}DTO> list${entityClassName}(${entityClassName}ListQry listQry);
 
-    MultiResponse<${entityClassName}DTO> page${entityClassName}(${entityClassName}PageQry pageQry);
+    PageLongResponse<${entityClassName}DTO> page${entityClassName}(${entityClassName}PageQry pageQry);
 
     SingleResponse<${entityClassName}DTO> count${entityClassName}(${entityClassName}CountQry countQry);
 }
