--- a/lazyegg-plugin-generator/src/main/resources/template/UpdateCmd.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/UpdateCmd.java.vm
@@ -1,11 +1,13 @@
 package ${package}.${moduleName}.dto;
 
+import lombok.Data;
+
 /**
  * ${entityClassName}UpdateCmd
  *
  * @author DifferentW  nsmeng3@163.com
  */
-
+@Data
 public class ${entityClassName}UpdateCmd {
 
 }
