--- a/lazyegg-plugin-generator/src/main/resources/template/AddCmdExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/AddCmdExe.java.vm
@@ -1,20 +1,29 @@
 package ${package}.${moduleName}.${entityName}.executor;
 
-import com.alibaba.cola.dto.Response;
-import com.alibaba.cola.exception.BizException;
+import com.alibaba.cola.dto.SingleResponse;
 import ${package}.${moduleName}.dto.${entityClassName}AddCmd;
-import ${package}.${moduleName}.dto.data.ErrorCode;
+import ${package}.${moduleName}.dto.data.${entityClassName}DTO;
+import ${package}.${moduleName}.${entityName}.${entityClassName}DO;
+import ${package}.${moduleName}.${entityName}.${entityClassName}DbService;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Component;
+
+import javax.annotation.Resource;
 
 
 @Component
 public class ${entityClassName}AddCmdExe {
 
-    public void execute(${entityClassName}AddCmd cmd) {
-        //The flow of usecase is defined here.
-        //The core ablility should be implemented in Domain. or sink to Domian gradually
+    @Resource
+    private ${entityClassName}DbService ${entityName}DbService;
 
-        return;
+    public SingleResponse<${entityClassName}DTO> execute(${entityClassName}AddCmd cmd) {
+        ${entityClassName}DO entity = new ${entityClassName}DO();
+        BeanUtils.copyProperties(cmd, entity);
+        ${entityName}DbService.save(entity);
+        ${entityClassName}DTO target = new ${entityClassName}DTO();
+        BeanUtils.copyProperties(entity, target);
+        return SingleResponse.of(target);
     }
 
 }
