--- a/lazyegg-plugin-generator/src/main/resources/template/UpdateCmdExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/UpdateCmdExe.java.vm
@@ -1,10 +1,12 @@
 package ${package}.${moduleName}.${entityName}.executor;
 
-import com.alibaba.cola.dto.Response;
-import ${package}.${moduleName}.domain.${entityName}.gateway.${entityClassName}Gateway;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import ${package}.${moduleName}.dto.${entityClassName}UpdateCmd;
+import ${package}.${moduleName}.${entityName}.${entityClassName}DO;
+import ${package}.${moduleName}.${entityName}.${entityClassName}DbService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Component;
 
 import javax.annotation.Resource;
@@ -20,11 +22,14 @@ public class ${entityClassName}UpdateCmdExe {
     private static final Logger log = LoggerFactory.getLogger(${entityClassName}UpdateCmdExe.class);
 
     @Resource
-    private ${entityClassName}Gateway ${entityName}Gateway;
+    private ${entityClassName}DbService ${entityName}DbService;
 
     public void execute(${entityClassName}UpdateCmd cmd) {
-        ${entityName}Gateway.update${entityClassName}(cmd);
-        return;
+        ${entityClassName}DO ${entityName}DO = new ${entityClassName}DO();
+        BeanUtils.copyProperties(cmd, ${entityName}DO);
+        LambdaUpdateWrapper<${entityClassName}DO> updateWrapper = new LambdaUpdateWrapper<>();
+        updateWrapper.eq(${entityClassName}DO::getId, cmd.getId());
+        ${entityName}DbService.update(${entityName}DO, updateWrapper);
     }
 }
 
