--- a/lazyegg-plugin-generator/src/main/resources/template/DO.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/DO.java.vm
@@ -1,10 +1,11 @@
 package ${package}.${moduleName}.${entityName};
 
 import lombok.Data;
+import com.baomidou.mybatisplus.annotation.TableName;
 import ${package}.component.db.entity.BaseDO;
 
 @Data
 @TableName("${entityName}")
-public class ${entityClassName}DO extends JoinBaseDO{
+public class ${entityClassName}DO extends BaseDO{
 
 }
