--- a/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
@@ -4,6 +4,7 @@ import com.alibaba.cola.catchlog.CatchAndLog;
 import com.alibaba.cola.dto.MultiResponse;
 import com.alibaba.cola.dto.Response;
 import com.alibaba.cola.dto.SingleResponse;
+import com.baomidou.mybatisplus.extension.plugins.pagination.PageDTO;
 import ${package}.${moduleName}.api.${entityClassName}ServiceI;
 import ${package}.${moduleName}.${entityName}.executor.${entityClassName}AddCmdExe;
 import ${package}.${moduleName}.${entityName}.executor.${entityClassName}DelCmdExe;
