--- a/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
@@ -1,6 +1,5 @@
 package ${package}.${moduleName}.${entityName};
 
-import com.alibaba.cola.catchlog.CatchAndLog;
 import com.alibaba.cola.dto.MultiResponse;
 import com.alibaba.cola.dto.Response;
 import com.alibaba.cola.dto.SingleResponse;
@@ -10,6 +9,7 @@ import ${package}.${moduleName}.${entityName}.executor.${entityClassName}AddCmdE
 import ${package}.${moduleName}.${entityName}.executor.${entityClassName}DelCmdExe;
 import ${package}.${moduleName}.${entityName}.executor.${entityClassName}UpdateCmdExe;
 import ${package}.${moduleName}.${entityName}.executor.query.*;
+import io.lazyegg.core.exception.CatchAndLog;
 import io.lazyegg.core.page.PageLongResponse;
 import ${package}.${moduleName}.dto.*;
 import ${package}.${moduleName}.dto.data.${entityClassName}DTO;
