polish code generate

--- a/lazyegg-plugin-generator/src/main/resources/template/AddCmdExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/AddCmdExe.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName}.executor;
+package ${package}.${moduleName}.${entityNameLowercase}.executor;
 
 import com.alibaba.cola.dto.SingleResponse;
 import ${package}.${moduleName}.dto.${entityClassName}AddCmd;
