--- a/lazyegg-plugin-generator/src/main/resources/template/GatewayImpl.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/GatewayImpl.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName};
+package ${package}.${moduleName}.${entityNameLowercase};
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
