--- a/lazyegg-plugin-generator/src/main/resources/template/ListQryExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ListQryExe.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName}.executor.query;
+package ${package}.${moduleName}.${entityNameLowercase}.executor.query;
 
 import com.alibaba.cola.dto.MultiResponse;
 import ${package}.${moduleName}.domain.${entityName}.gateway.${entityClassName}Gateway;
