--- a/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName};
+package ${package}.${moduleName}.${entityNameLowercase};
 
 import com.alibaba.cola.dto.MultiResponse;
 import com.alibaba.cola.dto.Response;
