--- a/lazyegg-plugin-generator/src/main/resources/template/UpdateCmdExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/UpdateCmdExe.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName}.executor;
+package ${package}.${moduleName}.${entityNameLowercase}.executor;
 
 import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import ${package}.${moduleName}.dto.${entityClassName}UpdateCmd;
