--- a/lazyegg-plugin-generator/src/main/resources/template/DbService.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/DbService.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName};
+package ${package}.${moduleName}.${entityNameLowercase};
 
 import icu.mhb.mybatisplus.plugln.base.service.JoinIService;
 
