--- a/lazyegg-plugin-generator/src/main/resources/template/Mapper.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/Mapper.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName};
+package ${package}.${moduleName}.${entityNameLowercase};
 
 import com.baomidou.mybatisplus.core.mapper.BaseMapper;
 import org.apache.ibatis.annotations.Mapper;
