--- a/lazyegg-plugin-generator/src/main/resources/template/PageQryExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/PageQryExe.java.vm
@@ -1,4 +1,4 @@
-package ${package}.${moduleName}.${entityName}.executor.query;
+package ${package}.${moduleName}.${entityNameLowercase}.executor.query;
 
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.PageDTO;
