--- a/lazyegg-plugin-generator/src/main/resources/template/Gateway.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/Gateway.java.vm
@@ -1,6 +1,6 @@
 package ${package}.${moduleName}.domain.${entityNameLowercase}.gateway;
 
-import ${package}.${moduleName}.domain.${entityName}.${entityClassName};
+import ${package}.${moduleName}.domain.${entityNameLowercase}.${entityClassName};
 import ${package}.${moduleName}.dto.${entityClassName}DelCmd;
 import ${package}.${moduleName}.dto.${entityClassName}UpdateCmd;
 
