--- a/lazyegg-plugin-generator/src/main/resources/template/GatewayImpl.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/GatewayImpl.java.vm
@@ -3,8 +3,8 @@ package ${package}.${moduleName}.${entityNameLowercase};
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.baomidou.mybatisplus.extension.plugins.pagination.PageDTO;
-import ${package}.${moduleName}.domain.${entityName}.${entityClassName};
-import ${package}.${moduleName}.domain.${entityName}.gateway.${entityClassName}Gateway;
+import ${package}.${moduleName}.domain.${entityNameLowercase}.${entityClassName};
+import ${package}.${moduleName}.domain.${entityNameLowercase}.gateway.${entityClassName}Gateway;
 import ${package}.${moduleName}.dto.${entityClassName}DelCmd;
 import ${package}.${moduleName}.dto.${entityClassName}UpdateCmd;
 import org.springframework.beans.factory.annotation.Autowired;
