--- a/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ServiceImpl.java.vm
@@ -5,10 +5,10 @@ import com.alibaba.cola.dto.Response;
 import com.alibaba.cola.dto.SingleResponse;
 import com.baomidou.mybatisplus.extension.plugins.pagination.PageDTO;
 import ${package}.${moduleName}.api.${entityClassName}ServiceI;
-import ${package}.${moduleName}.${entityName}.executor.${entityClassName}AddCmdExe;
-import ${package}.${moduleName}.${entityName}.executor.${entityClassName}DelCmdExe;
-import ${package}.${moduleName}.${entityName}.executor.${entityClassName}UpdateCmdExe;
-import ${package}.${moduleName}.${entityName}.executor.query.*;
+import ${package}.${moduleName}.${entityNameLowercase}.executor.${entityClassName}AddCmdExe;
+import ${package}.${moduleName}.${entityNameLowercase}.executor.${entityClassName}DelCmdExe;
+import ${package}.${moduleName}.${entityNameLowercase}.executor.${entityClassName}UpdateCmdExe;
+import ${package}.${moduleName}.${entityNameLowercase}.executor.query.*;
 import io.lazyegg.core.exception.CatchAndLog;
 import io.lazyegg.core.page.PageLongResponse;
 import ${package}.${moduleName}.dto.*;
