--- a/lazyegg-plugin-generator/src/main/resources/template/ListByNameQryExe.java.vm
+++ b/lazyegg-plugin-generator/src/main/resources/template/ListByNameQryExe.java.vm
@@ -1,8 +1,8 @@
 package ${package}.${moduleName}.${entityNameLowercase}.executor.query;
 
 import com.alibaba.cola.dto.MultiResponse;
-import ${package}.${moduleName}.domain.${entityName}.${entityClassName};
-import ${package}.${moduleName}.domain.${entityName}.gateway.${entityClassName}Gateway;
+import ${package}.${moduleName}.domain.${entityNameLowercase}.${entityClassName};
+import ${package}.${moduleName}.domain.${entityNameLowercase}.gateway.${entityClassName}Gateway;
 import ${package}.${moduleName}.dto.${entityClassName}ListByNameQry;
 import ${package}.${moduleName}.dto.data.${entityClassName}DTO;
 import org.springframework.beans.factory.annotation.Autowired;
